tests/negative/neg_pr118k_try_non_result.safe
package neg_pr118k_try_non_result

   function value returns integer

      return try 41
